# Lecture-Notes

lecture_notes/: README.md  lecture_notes.md  logs.txt  main.py  main2.py  pyproject.toml  requirements.txt
lecture_notes/Data/Transcript/: Video3Transcript.txt
lecture_notes/output/: lecture_notes.md
